# GameboyRust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  logger.rs  main.rs
src/devices/: screen.rs
src/emulator/: bus.rs  cartridge.rs  cpu.rs  gameboy.rs  interrupt.rs  interrupts_helper.rs  joypad.rs  memory.rs  mod.rs  ppu.rs  timer.rs
src/emulator/instructions/: alu16.rs  alu8.rs  bits.rs  execution.rs  inst_group.rs  interrupts.rs  jumps.rs  loads.rs  misc.rs  mod.rs  opcode.rs  opcode_table.rs  operand.rs  rotates.rs  stack.rs
src/emulator/mbcs/: mbc.rs  mbc1.rs  mbc5.rs  mod.rs  rom.rs
src/gui/: debug_term_gui.rs  debugger.rs  disassembler.rs  gameboy_screen.rs  mod.rs  tilemap_debug.rs
src/gui/widgets/: instructions_widget.rs  memory_widget.rs  mod.rs  registers_widget.rs  stacks_widget.rs  text_input_popup.rs
src/tests/: mod.rs  rom_test.rs  serde_helper.rs  singlestep_tests.rs  tests.rs
