[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"
image = "0.25.6"
