[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
# simplelog = "0.12.2"
env_logger = "0.11.8"
num-format = "0.4.4"
minifb = "0.28"
clap = { version = "4.5.40", features = ["derive"] }
